--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -584,7 +584,11 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -606,22 +610,8 @@
     "plt.ylabel(\"Temperature (F)\")\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"Images/trip_average_temperature.png\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Challenge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
